--- a/_config.yml
+++ b/_config.yml
@@ -94,7 +94,7 @@ author:
   codepen          :
   dribbble         :
   flickr           :
-  facebook         :
+  facebook         : "https://www.facebook.com/vedangjoshi2000"
   foursquare       :
   github           : "vedang-joshi"
   google_plus      :
