--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Vedang Joshi"
   avatar           : "profile.png"
-  bio              : "Undergrad at the University of Bristol who just wants to better appreciate the world around us through maths"
+  bio              : "Undergrad at the University of Bristol who wants to better understand the world around us through maths"
   location         : "Bristol, UK"
   employer         :
   pubmed           : 
