--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ yandex_site_verification :
 twitter:
   username               : &twitter
 facebook:
-  username               :
+  username               : &facebook
   app_id                 :
   publisher              :
 og_image                 :  # Open Graph/Twitter default site image
@@ -94,7 +94,7 @@ author:
   codepen          :
   dribbble         :
   flickr           :
-  facebook         : "https://www.facebook.com/vedangjoshi2000"
+  facebook         : "vedangjoshi2000"
   foursquare       :
   github           : "vedang-joshi"
   google_plus      :
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/vedangjoshi/"
+  linkedin         : "vedangjoshi"
   orcid            : 
   pinterest        :
   soundcloud       :
