--- a/_config.yml
+++ b/_config.yml
@@ -94,7 +94,7 @@ author:
   codepen          :
   dribbble         :
   flickr           :
-  facebook         : "vedangjoshi2000"
+  facebook         : 
   foursquare       :
   github           : "vedang-joshi"
   google_plus      :
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "vedangjoshi"
+  linkedin         : "https://www.linkedin.com/in/vedangjoshi"
   orcid            : 
   pinterest        :
   soundcloud       :
