--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "profile.png"
   bio              : "Undergrad at the University of Bristol who wants to better understand the world around us through maths"
   location         : "Bristol, UK"
-  employer         :
+  employer         : "University of Bristol"
   pubmed           : 
   googlescholar    : 
   email            : 
@@ -94,7 +94,7 @@ author:
   codepen          :
   dribbble         :
   flickr           :
-  facebook         : 
+  facebook         : "vedangjoshi2000"
   foursquare       :
   github           : "vedang-joshi"
   google_plus      :
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/vedangjoshi"
+  linkedin         : "vedangjoshi"
   orcid            : 
   pinterest        :
   soundcloud       :
