--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "profile.png"
   bio              : "Undergrad at the University of Bristol who wants to better understand the world around us through maths"
   location         : "Bristol, UK"
-  employer         : "University of Bristol"
+  employer         : 
   pubmed           : 
   googlescholar    : 
   email            : 
