--- a/_config.yml
+++ b/_config.yml
@@ -88,7 +88,7 @@ author:
   pubmed           : 
   googlescholar    : 
   email            : 
-  researchgate     : "https://www.researchgate.net/profile/Vedang_Joshi3"
+  researchgate     : # website
   uri              :
   bitbucket        :
   codepen          :
