--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Vedang Joshi"
-  avatar           : "profile.png"
+  avatar           : "IMG_1779.jpeg"
   bio              : "Undergrad at the University of Bristol who wants to better understand the world around us through maths"
   location         : "Bristol, UK"
   employer         : 
