--- a/_config.yml
+++ b/_config.yml
@@ -81,8 +81,8 @@ analytics:
 # Site Author
 author:
   name             : "Vedang Joshi"
-  avatar           : "IMG_1779.jpeg"
-  bio              : "Undergrad at the University of Bristol who wants to better understand the world around us through maths"
+  avatar           : "IMG_1779.png"
+  bio              : "Integrated Masters student at the University of Bristol interested in non-linear dynamical systems, pattern formation and swarm engineering."
   location         : "Bristol, UK"
   employer         : 
   pubmed           : 
