--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         : 
   pubmed           : 
   googlescholar    : 
-  email            : 
+  email            : "vedang0401@gmail.com"
   researchgate     : # website
   uri              :
   bitbucket        :
