--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         : 
   pubmed           : 
   googlescholar    : 
-  email            : "vedang0401@gmail.com"
+  email            : "vedang.joshi.2018@bristol.ac.uk"
   researchgate     : # website
   uri              :
   bitbucket        :
@@ -99,7 +99,7 @@ author:
   github           : "vedang-joshi"
   google_plus      :
   keybase          :
-  instagram        :
+  instagram        : "vedang._joshi"
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         : "vedangjoshi"
