--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Vedang Joshi"
   avatar           : "IMG_1779.png"
-  bio              : "Integrated Masters student at the University of Bristol interested in non-linear dynamical systems, pattern formation and swarm engineering."
+  bio              : "Incoming Rotational Graduate Engineer at Boeing Defense UK"
   location         : "Bristol, UK"
   employer         : 
   pubmed           : 
