--- a/_config.yml
+++ b/_config.yml
@@ -82,9 +82,9 @@ analytics:
 author:
   name             : "Vedang Joshi"
   avatar           : "IMG_1779.png"
-  bio              : "Incoming Rotational Graduate Engineer at Boeing Defense UK"
+  bio              : "Incoming Rotational Graduate Engineer"
   location         : "Bristol, UK"
-  employer         : 
+  employer         : "Boeing Defense UK"
   pubmed           : 
   googlescholar    : 
   email            : "vedang.joshi.2018@bristol.ac.uk"
