--- a/_config.yml
+++ b/_config.yml
@@ -83,11 +83,11 @@ author:
   name             : "Vedang Joshi"
   avatar           : "IMG_1779.png"
   bio              : "Incoming Rotational Graduate Engineer, Boeing UK"
-  location         : "Bristol, UK"
+  location         : "Portsmouth, UK"
   employer         : "Boeing UK"
   pubmed           : 
   googlescholar    : 
-  email            : "vedang.joshi.2018@bristol.ac.uk"
+  email            : "vedang0401@gmail.com"
   researchgate     : # website
   uri              :
   bitbucket        :
