--- a/_config.yml
+++ b/_config.yml
@@ -82,12 +82,12 @@ analytics:
 author:
   name             : "Vedang Joshi"
   avatar           : "IMG_1779.png"
-  bio              : "Incoming Rotational Graduate Engineer, Boeing UK"
+  bio              : "Graduate Project Engineer, Boeing UK"
   location         : "Portsmouth, UK"
   employer         : "Boeing UK"
   pubmed           : 
   googlescholar    : 
-  email            : "vedang0401@gmail.com"
+  email            :
   researchgate     : # website
   uri              :
   bitbucket        :
