--- a/_config.yml
+++ b/_config.yml
@@ -82,8 +82,8 @@ analytics:
 author:
   name             : "Vedang Joshi"
   avatar           : "IMG_1779.png"
-  bio              : "Graduate Project Engineer, Boeing UK"
-  location         : "Portsmouth, UK"
+  bio              : "Graduate Engineer, Boeing UK"
+  location         : "Bristol, UK"
   employer         : "Boeing UK"
   pubmed           : 
   googlescholar    : 
