--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Vedang Joshi"
   avatar           : "IMG_1779.png"
   bio              : "Graduate Engineer, Boeing UK"
-  location         : "Bristol, UK"
+  location         : "Fleet, UK"
   employer         : "Boeing UK"
   pubmed           : 
   googlescholar    : 
