--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Vedang Joshi"
   avatar           : "IMG_1779.png"
-  bio              : "Graduate Engineer, Boeing UK"
+  bio              : "Graduate Engineer, Boeing UK | Doctoral researcher, KCL"
   location         : "Fleet, UK"
   employer         : "Boeing UK"
   pubmed           : 
