--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Vedang Joshi"
   avatar           : "IMG_1779.png"
   bio              : "Graduate Engineer, Boeing UK | Doctoral researcher, KCL"
-  location         : "Fleet, UK"
+  location         : "London, UK"
   employer         : "Boeing UK"
   pubmed           : 
   googlescholar    : 
