--- a/_config.yml
+++ b/_config.yml
@@ -96,7 +96,7 @@ author:
   flickr           :
   facebook         : "vedangjoshi2000"
   foursquare       :
-  github           : "vedang-joshi"
+  github           : 
   google_plus      :
   keybase          :
   instagram        : "vedang._joshi"
