--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Vedang Joshi"
   avatar           : "IMG_1779.png"
-  bio              : "Graduate Engineer, Boeing UK | Doctoral researcher, KCL"
+  bio              : "Software Engineer, Boeing UK | Doctoral researcher, KCL"
   location         : "London, UK"
   employer         : "Boeing UK"
   pubmed           : 
@@ -94,7 +94,7 @@ author:
   codepen          :
   dribbble         :
   flickr           :
-  facebook         : "vedangjoshi2000"
+  facebook         : #"vedangjoshi2000"
   foursquare       :
   github           : 
   google_plus      :
@@ -109,7 +109,7 @@ author:
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "vedang2k"
+  twitter          : #"vedang2k"
   vine             :
   weibo            :
   xing             :
