--- a/_config.yml
+++ b/_config.yml
@@ -99,7 +99,7 @@ author:
   github           : 
   google_plus      :
   keybase          :
-  instagram        : "vedang._joshi"
+  instagram        : #"vedang._joshi"
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         : "vedangjoshi"
